<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mmi.colorgame.colorgameclient.ConnectionActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textView_connect_title"
        android:id="@+id/textView_connection"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textView_connect_ip"
        android:id="@+id/textView_ip"
        android:layout_below="@+id/textView_connection"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="95dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_ip"
        android:layout_below="@+id/textView_ip"
        android:layout_centerHorizontal="true"
        android:text="@string/ip"
        android:inputType="number|text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonText_connect"
        android:id="@+id/button_connect"
        android:onClick="connectToServer"
        android:layout_below="@+id/editText_ip"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="81dp" />

</RelativeLayout>
